--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,6 +197,13 @@ small {
 
 /*===============================================*/
 
+#popupModal .modal-body{
+	max-height: 500px;
+	overflow-y: auto;
+}
+
+/*===============================================*/
+
 /* header-area */
 .header-area {
 	position: fixed;
