--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,6 +201,10 @@ small {
 	max-height: 500px;
 	overflow-y: auto;
 }
+#category_discount_name p{
+	line-height:30px;
+	margin:0;
+}
 
 /*===============================================*/
 
